<resources>
    <string name="app_name">TrueWebApp</string>
    <string name="login">Login</string>
    <string name="otp">OTP</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="login_pwd_msg">Enter your password to login to your account</string>
    <string name="login_otp_msg">We will send you One Time Password on your mobile number</string>
    <string name="failure_time_out_error">Request time out!</string>
    <string name="failure_something_went_wrong">Something went wrong please try again later!</string>
    <string name="failure_server_not_responding">Oops! looks like we are having internal problems. Please try again later.</string>
    <string name="failure_internet_connection">Internet connection appears to be offline. Please check your network settings.</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_support">Support</string>
    <string name="menu_share">Share App</string>
    <string name="view_details"><u>View Details</u></string>
    <string name="ruppes_symbol">₹ </string>
    <string name="change_password">Change Password</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services_display_solutions"><![CDATA[Services & Display Solutions]]></string>
    <string name="company_address">My Address</string>
    <string name="my_rep_details">My Sales Representative</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="notifications_preferences">Notification Preferences</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="referral_rewards">Referral Rewards Program</string>
    <string name="refer_a_retailer_to_earn_rewards">Refer a Retailer to Earn Rewards</string>
    <string name="credit_in_your_wallet">£2.50 credit in your wallet</string>
    <string name="recent_notifications">Recent Notifications</string>
    <string name="view_all_orders">View All Orders</string>
    <string name="min_spend">Free with min app spend £2000 + VAT pcm</string>
    <string name="wall_display">1M Back Wall Display Solution</string>
    <string name="register_interest">Register Interest</string>
    <string name="products_not_included">PRODUCTS NOT INCLUDED - ADDITIONAL TERMS AND CONDITIONS APPLY</string>
    <string name="please_enter_your_current_password">Current password</string>
    <string name="please_confirm_your_new_password">Confirm password</string>
    <string name="please_enter_a_new_password">New password</string>
    <string name="update_password">Update Password</string>
    <string name="order_notifications">Order Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="basket_notifications">Basket Notifications</string>
    <string name="wallet_notifications">Wallet Notifications</string>
    <string name="promotion_notifications">Promotion / Offer Notifications</string>
    <string name="back_in_stock_notifications">Back In Stock Notifications</string>
    <string name="your_waller_balance">Your wallet balance</string>
    <string name="wallet_balance">£2.50</string>
    <string name="what_is_the_wallet">What is the wallet?</string>
    <string name="wallet_answer">The wallet contains credit you aquired from your previous purchases on this platform.</string>
    <string name="how_much_credit_do_i_get">How much credit do I get?</string>
    <string name="credit_answer">You will receive £1 wallet credit when you pay by bank transfer at checkout. We may also offer additional credit depending on your transaction history with us. For more details about your wallet credit limit, please contact our customer support team.</string>
    <string name="how_do_i_use_my_credit">How do I use my credit?</string>
    <string name="use_credit_answer">Your wallet credit will be automatically added to your wallet, and you can use your wallet balance toward your next purchase as a discount on the order total.</string>
    <string name="platform_question">Do I get credit if I don\'t use the platform?</string>
    <string name="platform_answer">No. Credit is only added to your wallet when you purchase through this platform.</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="notification">Notification</string>
    <string name="notification_text"><![CDATA[Meltz Dubai Chocolate – the hottest trend worldwide! 192g of indulgence in Pistachio, Oreo, Kinder & more. Stock up now & boost your sales with this bestseller!]]></string>
    <string name="shop">Shop</string>
    <string name="deals_offers"><![CDATA[Deals & Offers]]></string>
    <string name="total_items">10</string>
    <string name="cart">Cart</string>
    <string name="total_price">10.00</string>
    <string name="order_success">Thank you for your order.</string>
    <string name="order_success_message">You will receive email confirmation shortly</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="delete_account">Delete Account</string>
    <string name="offers_discounts"><![CDATA[OFFERS &\nDISCOUNTS]]></string>
    <string name="my_orders">My Orders</string>
    <string name="payment_options">Payment Options</string>

</resources>