<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border_primary"
    android:gravity="start"
    android:padding="@dimen/padding10"
    android:layout_marginLeft="@dimen/margin10"
    android:layout_marginRight="@dimen/margin10"
    android:layout_marginTop="@dimen/margin10">



    <TextView
        android:id="@+id/textSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wall_display"
        android:textSize="@dimen/headingTextSize"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_spend"
        android:textSize="@dimen/baseTextSize"
        android:layout_marginTop="5sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220sp"
        android:src="@drawable/ic_pos"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/margin10"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pointsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin10"
        android:nestedScrollingEnabled="false">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatSpinner
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/border_primary">

    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/tvRegisterInterest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height40"
        android:text="@string/register_interest"
        android:textSize="@dimen/buttonTextSize"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:background="@drawable/border_solid_secondary"
        android:layout_marginTop="@dimen/margin10"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products_not_included"
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="@dimen/margin10"
        android:gravity="center"
        android:layout_gravity="center"/>

</LinearLayout>
