<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.component.main.account.WalletActivity">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:elevation="10sp"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/backLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:gravity="center">


            <ImageView
                android:id="@+id/backButton"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:fontFamily="@font/roboto_bold"
                android:text="Back"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark">

            </TextView>

        </LinearLayout>

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8sp"
            android:gravity="center"
            android:text="@string/wallet"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="match_parent"
                android:layout_height="120sp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_banner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="20sp"
                android:text="Your wallet balance"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/border_primary"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/ic_wallet">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/wallet_balance"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:fontFamily="@font/roboto_bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Credit"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:fontFamily="@font/roboto_bold"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_the_wallet"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/wallet_answer"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_much_credit_do_i_get"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/credit_answer"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_do_i_use_my_credit"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/use_credit_answer"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platform_question"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/platform_answer"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
