<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.component.main.wallet.WalletFragment">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding16"
        android:elevation="@dimen/elevation10"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/imageWidth24"
            android:layout_height="@dimen/imageHeight24"
            android:src="@drawable/ic_wallet_unselected"
            app:tint="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wallet"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/mainHeadingTextSize"
            android:fontFamily="@font/roboto_bold_italic"
            android:layout_marginStart="@dimen/margin8"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height120"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_banner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin20"
                android:text="Your wallet balance"
                android:textColor="@color/black"
                android:textSize="@dimen/headingTextSize"
                android:fontFamily="@font/roboto_bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height60"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/border_primary"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@drawable/ic_wallet_unselected"
                        app:tint="@color/colorPrimaryDark">

                    </ImageView>

                    <TextView
                        android:id="@+id/tvAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="£0.00"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/roboto_bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Credit"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:fontFamily="@font/roboto_bold"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_the_wallet"
                    android:textColor="@color/black"
                    android:textSize="@dimen/headingTextSize"
                    android:fontFamily="@font/roboto_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/wallet_answer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/baseTextSize"
                    android:fontFamily="@font/roboto_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_much_credit_do_i_get"
                    android:textColor="@color/black"
                    android:textSize="@dimen/headingTextSize"
                    android:fontFamily="@font/roboto_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/credit_answer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/baseTextSize"
                    android:fontFamily="@font/roboto_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_do_i_use_my_credit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/headingTextSize"
                    android:fontFamily="@font/roboto_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/use_credit_answer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/baseTextSize"
                    android:fontFamily="@font/roboto_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platform_question"
                    android:textColor="@color/black"
                    android:textSize="@dimen/headingTextSize"
                    android:fontFamily="@font/roboto_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/platform_answer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/baseTextSize"
                    android:fontFamily="@font/roboto_regular" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
